# trompeloeil

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Makefile.travis  README.md  appveyor.yml  check_errors.sh  compiling_catch_test.cpp  compiling_tests.cpp  conanfile.py  install_libcxx.sh  thread_terror.cpp  trompeloeil-config.cmake  trompeloeil.hpp  verify_compilation_error.sh
.github/workflows/: ci.yml
compilation_errors/: CMakeLists.txt  address_of_illegal_argument.cpp  any_with_array_type.cpp  assign_illegal_argument.cpp  co_return_and_co_throw.cpp  co_return_empty_to_non_void_coroutine.cpp  co_return_from_non_coroutine.cpp  co_return_on_forbidden_call.cpp  co_return_value_to_void_coroutine.cpp  co_return_with_mismatching_type.cpp  co_throw_and_co_return.cpp  co_throw_from_non_coroutine.cpp  co_throw_on_forbidden_call.cpp  co_yield_from_non_coroutine.cpp  co_yield_to_promise_without_yield_value.cpp  co_yield_void.cpp  co_yield_with_mistamching_type.cpp  deathwatched_with_nonvirtual_destructor.cpp  dereference_illegal_argument.cpp  expectation_on_non_mocked_function.cpp  expectation_with_unknown_func_name.cpp  expectation_with_wrong_cardinality.cpp  expectation_with_wrong_type.cpp  illegal_move_mock.cpp  in_sequence_on_forbidden_call.cpp  make_mock_with_wrong_cardinality.cpp  missing_co_return_from_void_coroutine.cpp  missing_return_on_non_void_func.cpp  mixed_limits_with_rt_limits.cpp  mixed_rt_limits_with_limits.cpp  multiple_co_return.cpp  multiple_co_throw.cpp  multiple_late_return_on_non_void_func.cpp  multiple_limits.cpp  multiple_return_on_non_void_func.cpp  multiple_rt_limits.cpp  multiple_rt_limits_and_ct_limits.cpp  multiple_sequences.cpp  multiple_sequences_destruction.cpp  multiple_sequences_named_destruction.cpp  (+32 more)
docs/: Backward.md  Contributing.md  CookBook.md  FAQ.md  PlatformsAndLibraries.md  reference.md  trompeloeil_cheat_sheet.odp
generator/: README  generator.py
generator/cpp/: trompeloeil_class.py  trompeloeil_class_test.py
include/: trompeloeil.hpp
include/boost/: trompeloeil.hpp
include/cantata/: trompeloeil.hpp
include/catch2/: trompeloeil.hpp
include/criterion/: trompeloeil.hpp
include/crpcut/: trompeloeil.hpp
include/cxxtest/: trompeloeil.hpp
include/doctest/: trompeloeil.hpp
include/gtest/: trompeloeil.hpp
include/trompeloeil/: coro.hpp  cpp11_shenanigans.hpp  lifetime.hpp  matcher.hpp  mock.hpp  sequence.hpp  stream_tracer.hpp
include/trompeloeil/matcher/: compare.hpp  deref.hpp  member_is.hpp  not.hpp  range.hpp  re.hpp  set_predicate.hpp
test/: CMakeLists.txt  compiling_tests.cpp  compiling_tests.hpp  compiling_tests_11.cpp  compiling_tests_11_v1.cpp  compiling_tests_11_v2.cpp  compiling_tests_14.cpp  custom_recursive_mutex.cpp  micro_coro.hpp  test_co_mock.cpp  test_main.cpp  test_reporter.hpp  thread_terror.cpp
test_package/: CMakeLists.txt  conanfile.py
